# rust_microservices

./: README.md  docker-compose.yml
rust_1/: Cargo.toml  Dockerfile
rust_1/src/: main.rs
rust_2/: Cargo.toml  Dockerfile
rust_2/src/: app.rs  main.rs
rust_2/src/app/: consumer.rs  db.rs  mapper.rs
rust_2/src/models/: message.rs
